--- a/Balldventure/Balldventure.vcxproj.filters
+++ b/Balldventure/Balldventure.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="clean_I2_Output.c">
+    <ClCompile Include="Composition.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
