--- a/I2/I2.vcxproj
+++ b/I2/I2.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{DCBBA431-2FAC-4A2B-A87F-95BFFE39A7C4}</ProjectGuid>
     <RootNamespace>I2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>clean_i2sorted</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -115,7 +116,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="I2.c" />
+    <ClCompile Include="clean_I2_Output.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
