--- a/I2_new/I2_new.vcxproj
+++ b/I2_new/I2_new.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{17DF3AB5-6A21-4220-90AA-AE8EE7F71048}</ProjectGuid>
-    <RootNamespace>Ballerburg</RootNamespace>
+    <ProjectGuid>{58243FA7-10E8-41CF-B6DD-DF5826983323}</ProjectGuid>
+    <RootNamespace>I2new</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -76,12 +76,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Matthias\Documents\opencv\opencv\build\include</AdditionalIncludeDirectories>
     </ClCompile>
-    <Link>
-      <AdditionalLibraryDirectories>C:\Users\Matthias\Documents\opencv\opencv\build\x64\vc15\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_world344d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -117,19 +112,10 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opencv_world344.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BackGround.cpp" />
-    <ClCompile Include="Ballerburg.cpp" />
-    <ClCompile Include="Floor.cpp" />
-    <ClCompile Include="Mountain.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Floor.h" />
-    <ClInclude Include="BackGround.h" />
-    <ClInclude Include="mountain.h" />
+    <ClCompile Include="I2_new.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
