--- a/I2_new/I2_new.vcxproj.filters
+++ b/I2_new/I2_new.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="clean_I2_Output.c">
+    <ClCompile Include="I2_new.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
