--- a/O1/O1.vcxproj.filters
+++ b/O1/O1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="clean_I2_Output.c">
+    <ClCompile Include="O1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
