--- a/O2/O2.vcxproj
+++ b/O2/O2.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{17DF3AB5-6A21-4220-90AA-AE8EE7F71048}</ProjectGuid>
-    <RootNamespace>Ballerburg</RootNamespace>
+    <ProjectGuid>{353F89A2-7641-4268-B771-1F49C286C7CE}</ProjectGuid>
+    <RootNamespace>O2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -76,12 +76,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Matthias\Documents\opencv\opencv\build\include</AdditionalIncludeDirectories>
     </ClCompile>
-    <Link>
-      <AdditionalLibraryDirectories>C:\Users\Matthias\Documents\opencv\opencv\build\x64\vc15\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_world344d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -117,19 +112,15 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opencv_world344.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BackGround.cpp" />
-    <ClCompile Include="Ballerburg.cpp" />
-    <ClCompile Include="Floor.cpp" />
-    <ClCompile Include="Mountain.cpp" />
+    <ClCompile Include="O2.cpp" />
+    <ClCompile Include="santa.cpp" />
+    <ClCompile Include="XmasTree.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Floor.h" />
-    <ClInclude Include="BackGround.h" />
-    <ClInclude Include="mountain.h" />
+    <ClInclude Include="Christmas_Object.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
