--- a/O2/O2.vcxproj.filters
+++ b/O2/O2.vcxproj.filters
@@ -15,8 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="clean_I2_Output.c">
+    <ClCompile Include="O2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="XmasTree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="santa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Christmas_Object.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
